--- a/index.html
+++ b/index.html
@@ -167,21 +167,21 @@
             </main>
        <footer class="footer"> 
 
-            <div class="content-wrap">
+            <div class="footer-wrap">
 
                     <span class="footer__logo">ohmyfood</span>
 
-                    <ul class="footer__list"> 
-                        <li class="footer__list__item"> 
-                            <a class="footer__link" href="#"><i class="fa-utensils fas footer__icon__fork"></i>Proposer un restaurant</a> 
+                    <ul class="footer__liste"> 
+                        <li class="footer__liste__item"> 
+                            <a class="footer__link" href="#"><i class="fa-utensils fas footer__icon"></i>Proposer un restaurant</a> 
                         </li> 
-                        <li class="footer__list__item"> 
+                        <li class="footer__liste__item"> 
                             <a class="footer__link" href="#"><i class="fa-hands-helping fa-sm fas footer__icon"></i>Devenir partenaire</a> 
                         </li> 
-                        <li class="footer__list__item"> 
+                        <li class="footer__liste__item"> 
                             <a class="footer__link" href="#">Mentions légales</a> 
                         </li> 
-                        <li class="footer__list__item"> 
+                        <li class="footer__liste__item"> 
                             <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a> 
                         </li> 
                     </ul> 
