--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                           <article>
                            <div class="boite">
                             <a class="restaurants__card" href="la-palette-du-gout.html"> 
-                              <img rel="lightbox" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la-palette-du-gout" class="restaurants__liste__image">
+                              <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la-palette-du-gout" class="restaurants__liste__image">
 
                               <div class="legende">Nouveau</div>
                               <div class="restaurants__liste__footer">
@@ -97,7 +97,7 @@
                           <article>
                            <div class="boite">
                             <a class="restaurants__card" href="la-note-enchantee.html">
-                              <img rel="lightbox" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la-note-enchantee" class="restaurants__liste__image">
+                              <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la-note-enchantee" class="restaurants__liste__image">
 
                               <div class="legende">Nouveau</div>
                               <div class="restaurants__liste__footer">
