styles 414px->666px

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <link rel="stylesheet" href="./css/styles.css">
         <link rel="stylesheet" media="only screen and (min-width: 360px) and (max-width: 413px)" href="./css/style-medium.css">
+        <link rel="stylesheet" media="only screen and (min-width: 414px) and (max-width: 666px)" href="./css/style-medium1.css">
         <title>Accueil - ohmyfood</title><meta name="title" content="Accueil - ohmyfood">
     </head>
 
