--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -8,8 +8,13 @@
         <script src="https://kit.fontawesome.com/5337207aaf.js" crossorigin="anonymous"></script>
 
         <link rel="stylesheet" href="./css/styles.css">
-        <link rel="stylesheet" media="only screen and (min-width: 360px) and (max-width: 413px)" href="./css/style-medium.css">
-        <link rel="stylesheet" media="only screen and (min-width: 414px) and (max-width: 666px)" href="./css/style-medium1.css">
+
+        <link rel="stylesheet" media="only screen and (min-width: 360px) and (max-width: 413px)" href="./css/styles-xsmall.css">
+
+        <link rel="stylesheet" media="only screen and (min-width: 414px) and (max-width: 667px)" href="./css/styles-small.css">
+
+        <link rel="stylesheet" media="only screen and (min-width: 668px) and (max-width: 740px)" href="./css/styles-medium.css">
+        
         <title>A la Française - ohmyfood</title><meta name="title" content="La Palette du Goût - ohmyfood">
     </head>
 
