--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -7,7 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/5337207aaf.js" crossorigin="anonymous"></script>
 
-        <link rel="stylesheet" href="./css/mobilefirst.css">
+        <!--link rel="stylesheet" href="./css/mobilefirst.css"-->
+        <link rel="stylesheet" href="./css/styles.css">
 
         <title>La Note Enchantée - ohmyfood</title><meta name="title" content="La Note Enchantée - ohmyfood">
     </head>
@@ -32,8 +33,8 @@
                             </div>                                 
                        </div>
 
-                    <section class="global">
-                        <div class="restaurants__sousmenu">
+                    <section class="global width">
+                        <div class="restaurants__sousmenu width">
                            <h3 class="menu">Entrées</h3>
                               <div class="border"></div>
                              <!-- -->
@@ -93,7 +94,7 @@
                              
                         </div>
 
-                        <div class="restaurants__sousmenu">
+                        <div class="restaurants__sousmenu width">
                             <h3 class="menu">Plats</h3>
                               <div class="border"></div>
                               <!-- -->
@@ -140,7 +141,7 @@
                                   
                         </div>
 
-                        <div class="restaurants__sousmenu">
+                        <div class="restaurants__sousmenu width">
                             <h3 class="menu">Desserts</h3>
                               <div class="border"></div>
                               <!-- -->
