--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -21,8 +21,7 @@
                         <a href="index.html" class="header__logo">ohmyfood</a>
 
                 </header>
-                <content class="content">
-
+                <div class="content">
                     <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="a-la-francaise" class="restaurants__imgmenu">
 
                         <div class="restaurants__liste__menu">
@@ -183,7 +182,7 @@
                         <a href="#restaurants" class="recherche__button"> Commander </a>
                         </div>
                       </div>
-                </content>
+                </div>
                   <footer class="footer"> 
 
                     <div class="footer-wrap">
