--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -21,8 +21,8 @@
                         <a href="index.html" class="header__logo">ohmyfood</a>
 
                 </header>
-                <content class="content">
-
+                <div class="content">
+                    
                     <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="a-la-francaise" class="restaurants__imgmenu">
 
                         <div class="restaurants__liste__menu">
@@ -184,7 +184,7 @@
                         </div>
                       </div>
 
-                </content>
+                </div>
                   <footer class="footer"> 
 
                     <div class="footer-wrap">
