--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -21,7 +21,7 @@
                         <a href="index.html" class="header__logo">ohmyfood</a>
 
                 </header>
-                <content class="content">
+                <div class="content">
 
                     <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="a-la-francaise" class="restaurants__imgmenu">
 
@@ -196,16 +196,7 @@
                         <a href="#restaurants" class="recherche__button"> Commander </a>
                         </div>
                       </div>
-
-
-
-
-
-
-
-
-
-                </content>
+                </div>
                   <footer class="footer"> 
 
                     <div class="footer-wrap">
